<resources>
    <string name="app_name">Books</string>
    <string name="noti_exit">Press once more to close the app.</string>
    <string name="search">Search</string>
    <string name="search_query_hint">Search books by Title, Author or ISBN</string>
    <string name="image_description_book">book image</string>
    <string name="img_arrow_upward">img_arrow_upward</string>
    <string name="load_more">load more</string>
    <string name="cover_image">cover image</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="authors">Authors</string>
    <string name="isbn10">ISBN10</string>
    <string name="isbn13">ISBN13</string>
    <string name="pages">Pages</string>
    <string name="rating">Rating</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="url">Url</string>
    <string name="new_releases_books">New Releases Books</string>
    <string name="pdf">Pdf</string>
    <string name="published">published</string>
    <string name="arrow_downward">arrow_downward</string>
    <string name="failed_load_data">데이터를 불러오지 못했습니다.</string>
    <string name="pdf_key">%1$s: </string>
    <string name="hyperlink_text">&lt;a href="%1$s">Go to IT book store for more information.&lt;/a></string>
    <string name="detail_book">Detail Book</string>
    <string name="publisher">Publisher</string>
    <string name="search_guide">
        Search books with Keyword consisting of english letters or numbers.
        \n\nYou can also search with following operators.
        \n\n1. OR(|) operator(e.g. java|kotlin) searches books for each keyword are combined and displayed..
        \n\n2. Not(-) operator(e.g. android-java) searches books with the preceding keyword in the title, but shows books that do not include the following keyword..
    </string>
</resources>
